# fitplib

./: .gitignore  CMakeLists.txt
fitp/: CMakeLists.txt  fitp.h  fitprotocold.devices
fitp/common/log/: log.c  log.h  x86_log.c
fitp/common/net_layer/: net_common.h
fitp/common/phy_layer/: constants.h  phy.h
fitp/coord/fitp/: fitp.c
fitp/coord/global_storage/: global.h
fitp/coord/link_layer/: link.c  link.h
fitp/coord/net_layer/: net.c  net.h
fitp/coord/phy_layer/: phy.c  x86_phy.c
fitp/ed/fitp/: fitp.c
fitp/ed/global_storage/: global.c  global.h
fitp/ed/link_layer/: link.c  link.h
fitp/ed/net_layer/: net.c  net.h
fitp/ed/phy_layer/: phy.c
fitp/pan/: debug.h  include.h
fitp/pan/fitp/: fitp.cpp
fitp/pan/global_storage/: global.cpp  global.h
fitp/pan/link_layer/: link.cpp  link.h
fitp/pan/net_layer/: net.cpp  net.h
fitp/pan/phy_layer/: ftdi_phy.cc  ftdi_phy.h  phy.cpp  phy.h  x86_phy.cc
